#include "audio_processor_service.h"
#include <iostream>
#include <fstream>
#include <cstdlib>

grpc::Status AudioProcessorServiceImpl::ExtractAudio(
    grpc::ServerContext* context,
    const soundboard::ExtractAudioRequest* request,
    soundboard::ExtractAudioResponse* response) {
    
    std::cout << "ExtractAudio called:" << std::endl;
    std::cout << "  Video: " << request->video_path() << std::endl;
    std::cout << "  Output: " << request->output_path() << std::endl;
    std::cout << "  Format: " << request->format() << std::endl;
    
    // For now, return mock response
    // TODO: Implement actual FFmpeg processing
    response->set_success(true);
    response->set_audio_path(request->output_path());
    response->set_duration_seconds(10.5f);
    response->set_file_size_bytes(1024000);
    response->set_error_message("");
    
    std::cout << "  Result: SUCCESS (mock)" << std::endl;
    
    return grpc::Status::OK;
}

grpc::Status AudioProcessorServiceImpl::GetAudioInfo(
    grpc::ServerContext* context,
    const soundboard::AudioInfoRequest* request,
    soundboard::AudioInfoResponse* response) {
    
    std::cout << "GetAudioInfo called for: " << request->audio_path() << std::endl;
    
    // Mock response
    response->set_duration_seconds(10.5f);
    response->set_sample_rate(44100);
    response->set_channels(2);
    response->set_bitrate_kbps(192);
    response->set_format("mp3");
    
    return grpc::Status::OK;
}

grpc::Status AudioProcessorServiceImpl::ApplyEffects(
    grpc::ServerContext* context,
    const soundboard::ApplyEffectsRequest* request,
    soundboard::ApplyEffectsResponse* response) {
    
    std::cout << "ApplyEffects called:" << std::endl;
    std::cout << "  Audio: " << request->audio_path() << std::endl;
    std::cout << "  Speed: " << request->speed_factor() << "x" << std::endl;
    std::cout << "  Pitch: " << request->pitch_semitones() << " semitones" << std::endl;
    
    // Mock response
    response->set_success(true);
    response->set_processed_audio_path(request->output_path());
    response->set_error_message("");
    
    return grpc::Status::OK;
}